<resources>
    <string name="app_name">Task Manager</string>
    <string name="welcome">Sign up was successful %s</string>
    <string name="sign_in_welcome">Sign in was successful %s</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="All_fields_must_me_full">All fields must be full</string>
    <string name="passwords_do_not_match">passwords don\'t match</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="or_continue_with">or continue with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exchange_rates">Exchange rates</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="tasks">tasks</string>
    <string name="Rankings">Rankings</string>
    <string name="login">login</string>
    <string name="transactions">transactions</string>
    <string name="tbc_market_value">TBC Market value</string>
    <string name="group">Groups</string>
    <string name="buy">buy</string>
    <string name="sell">sell</string>
    <string name="price">%s₾</string>
    <string name="name">tribe name</string>
    <string name="invite">invite link</string>
    <string name="description">description</string>
    <string name="profile">profile</string>
    <string name="create">Create</string>
    <string name="log_out">log out</string>
    <string name="manage_tribe">Manage Tribe</string>
    <string name="create_tribe">Create Tribe</string>
    <string name="join_tribe">join Tribe</string>
    <string name="cant_create">you need to leave tribe to create new one</string>
    <string name="already_in_tribe">you are already in the tribe</string>
    <string name="completed">Completed ?</string>
    <string name="task_error">there was an error adding task make sure task information is correct</string>

    <string name="invited_by">invited by %s</string>
    <string name="dialog">TribeDialog</string>
    <string name="task_dialog">Users</string>
    <string name="token">token</string>
    <string name="user">user</string>
    <string name="tribes">tribes</string>
    <string name="tribeId">tribeId</string>
    <string name="tribe_url">https://tribeapp-9f76c-default-rtdb.firebaseio.com/</string>
    <string name="notInTribe">you need to be in the tribe to manage one</string>
    <string name="Key1">requestKeys</string>
    <string name="key2">bundleKeys</string>
    <string name="key3">requestKey</string>
    <string name="key4">bundleKey</string>
    <string name="error">error</string>
    <string name="username">Username</string>
    <string name="tribe_description">Tribe Description</string>
    <string name="invite_user">invite</string>
    <string name="join">join</string>
    <string name="you_re_invites_will_show_up_here">you\'re invites will show up here</string>
    <string name="add_task">add Task</string>
    <string name="task_name">Task Name</string>
    <string name="invite_friend">invite friend</string>
    <string name="leave_group">Leave Group</string>
    <string name="date">4/6/2023 6:00 PM</string>
    <string name="message">message</string>
    <string name="messages_could_not_be_loaded">messages_could_not_be_loaded</string>

    <string name="reading">Read a book</string>
    <string name="run">Go for a run</string>
    <string name="wake_up">Wake up at 8AM</string>
    <string name="meditate">Meditate</string>
    <string name="no_social_media">Don\'t use social media</string>
    <string name="learn_new">Spend 30 minutes to learn a new skill or topic</string>
    <string name="write_new">write down 5 things you have acomplished every day</string>
    <string name="is_this_task_for_everyone">is this Task for everyone?</string>
    <string name="submit">Submit</string>
    <string name="nikoloz_2142">nikoloz#2142</string>
    <string name="nikoloz_khatiashvili">Nikoloz Khatiashvili</string>

    <string name="cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
    <string name="add_photo">Add Photo!</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="permission_required"> Permission Required</string>
    <string name="permission_req_dialog">If you want to use his feature, app needs this permission, please accept it</string>
    <string name="deny_from_dialog">No, i do not want to accept it</string>
    <string name="accept_from_dialog">I will accept it, so ask permission again</string>
    <string name="permission_message_from_snackbar">I will accept it, so ask permission again</string>
    <string name="settings">Settings</string>
    <string name="Package">Package</string>

    <string-array name="habits">
        <item>@string/reading</item>
        <item>@string/run</item>
        <item>@string/wake_up</item>
        <item>@string/meditate</item>
        <item>@string/no_social_media</item>
        <item>@string/learn_new</item>
        <item>@string/write_new</item>
    </string-array>


    <string-array name="users">
        <item>Choose from here</item>
        <item>NikaKhatiashvili44@gmail.com</item>
        <item>Random RandomaShvili</item>
        <item>Natia Khatiashvili</item>
        <item>Gio Khatiashvil</item>
        <item>Gabi Khatiashvili</item>
        <item>Sani SaniShvili</item>
    </string-array>

</resources>
