<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="@dimen/spacing_100dp"
        android:layout_height="@dimen/spacing_100dp"
        android:layout_marginStart="@dimen/spacing_24dp"
        android:layout_marginTop="@dimen/spacing_54dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16dp"
        android:layout_marginTop="@dimen/spacing_8dp"
        style="@style/TextAppearance.TribeManager.Text.Headline"
        android:text="@string/nikoloz_khatiashvili"
        app:layout_constraintTop_toTopOf="@id/image"
        app:layout_constraintStart_toEndOf="@+id/image" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16dp"
        android:layout_marginTop="@dimen/spacing_8dp"
        style="@style/TextAppearance.TribeManager.Text.Caption"
        android:text="@string/nikoloz_2142"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintStart_toEndOf="@+id/image" />

    <ImageView
        android:layout_width="@dimen/spacing_32dp"
        android:layout_height="@dimen/spacing_32dp"
        android:src="@drawable/baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="@+id/image" />

    <Button
        android:id="@+id/btnCreateTribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_32dp"
        android:text="@string/create_tribe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnJoinTribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_tribe"
        android:layout_marginBottom="@dimen/spacing_32dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateTribe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnManageTribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_32dp"
        android:text="@string/manage_tribe"
        app:layout_constraintBottom_toTopOf="@+id/btnLogOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_32dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toTopOf="@+id/btnJoinTribe"
        app:layout_constraintEnd_toEndOf="@+id/btnJoinTribe"
        app:layout_constraintStart_toStartOf="@+id/btnJoinTribe" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
