<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_8dp">

        <TextView
            android:id="@+id/name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.TribeManager.Text.Title"
            android:text="@string/username"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_16dp"
            android:layout_toEndOf="@id/name_textview"
            android:layout_marginStart="8dp"
            style="@style/TextAppearance.TribeManager.Text.Caption"
            android:textColor="@color/gray"
            android:text="@string/date"
            android:textSize="14sp" />
    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/status_blue"
        app:cardCornerRadius="16dp"
        app:contentPadding="8dp">

        <TextView
            android:id="@+id/content_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.TribeManager.Text.Footnote.Regular"
            android:text="@string/message"
            android:textSize="14sp" />
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>