<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInvite"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/invite_user"
        app:layout_constraintBottom_toBottomOf="@+id/etEmail"
        app:layout_constraintStart_toEndOf="@+id/etEmail"
        app:layout_constraintTop_toTopOf="@+id/etEmail"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_32dp"
        android:layout_marginEnd="@dimen/spacing_124dp"
        android:layout_marginStart="@dimen/spacing_32dp"
        android:hint="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColorHint="@color/gray"
        app:boxCornerRadiusBottomEnd="@dimen/spacing_10dp"
        app:boxCornerRadiusBottomStart="@dimen/spacing_10dp"
        app:boxCornerRadiusTopEnd="@dimen/spacing_10dp"
        app:boxCornerRadiusTopStart="@dimen/spacing_10dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
