<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etDescription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/tribe_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColorHint="@color/gray"
        app:boxCornerRadiusBottomEnd="@dimen/spacing_10dp"
        app:boxCornerRadiusBottomStart="@dimen/spacing_10dp"
        app:boxCornerRadiusTopEnd="@dimen/spacing_10dp"
        app:boxCornerRadiusTopStart="@dimen/spacing_10dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColorHint="@color/gray"
        app:boxCornerRadiusBottomEnd="@dimen/spacing_10dp"
        app:boxCornerRadiusBottomStart="@dimen/spacing_10dp"
        app:boxCornerRadiusTopEnd="@dimen/spacing_10dp"
        app:boxCornerRadiusTopStart="@dimen/spacing_10dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
